--- a/rx1/src/main/AndroidManifest.xml
+++ b/rx1/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest package="io.github.plastix.rx1"
+<manifest package="io.github.plastix.rxschedulerrule"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application android:label="@string/app_name"/>
